# rust-esp32

./: readme.md
embassy-no-std/: Cargo.toml  readme.md
embassy-no-std/.devcontainer/: Dockerfile  devcontainer.json
embassy-no-std/docs/: README.md
embassy-no-std/scripts/: flash.sh
embassy-no-std/src/: main.rs
embassy-std/: Cargo.toml  readme.md
embassy-std/.devcontainer/: devcontainer.json
embassy-std/docs/: README.md
embassy-std/scripts/: flash.sh
embassy-std/src/: main.rs
no-std-ssd1680-spi-async-display/: Cargo.toml  readme.md
no-std-ssd1680-spi-async-display/src/: main.rs
no-std-ssd1680-spi-display/: Cargo.toml
no-std-ssd1680-spi-display/src/: main.rs
usb-serial-no-std/: Cargo.toml
usb-serial-no-std/.cargo/: config.toml
usb-serial-no-std/.devcontainer/: devcontainer.json
usb-serial-no-std/docs/: README.md
usb-serial-no-std/scripts/: flash.sh
usb-serial-no-std/src/: main.rs
