[package]
name = "embassy-std"
version = "0.1.0"
authors = ["Preston Garrison III <preston.garrison3@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[dependencies]
log = { version = "0.4", default-features = false }
embassy-executor = "0.5.0"
embassy-time = {version = "0.3.0", features = ["generic-queue-8"]}

[dependencies.esp-idf-svc]
version = "0.48"
default-features = false
features = ["alloc", "native", "binstart", "critical-section", "embassy-sync", "embassy-time-driver"]

[build-dependencies]
embuild = { version="0.32.0", features = ["espidf"]}
cc = "=1.1.30"