[package]
name = "no-std-ssd1680-spi-display"
version = "0.1.0"
authors = ["Preston Garrison III <pg3@flightone.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.11.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.17.0", features = [ "esp32s3" , "embassy", "embassy-time-timg0", "embassy-executor-thread", "async"]}
esp-println = { version = "0.9.0", features = ["esp32s3", "log"] }
log = { version = "0.4.20" }
embassy-executor = {version = "0.5.0", features = ["task-arena-size-8192"]}
embassy-time = {version = "0.3.0", features = ["generic-queue-8"]}
embedded-hal-bus = { version = "0.2.0", features = ["async"] }
ssd1680 = {git = "https://github.com/PGIII/ssd1680", branch="display-interface"}
embedded-graphics = "0.8.1"
display-interface-spi = "0.5.0"
[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
